RESOLVED FIXED114481
REGRESSION (r146956): ASSERTion failure: WebKit::WebProcess::pageWillLeaveWindow
https://bugs.webkit.org/show_bug.cgi?id=114481
Summary REGRESSION (r146956): ASSERTion failure: WebKit::WebProcess::pageWillLeaveWindow
Tim Horton
Reported 2013-04-11 17:08:20 PDT
<rdar://problem/13534784> We weren't correctly informing the WebProcess of WebPages that *start* in-window, which is a rare case (as far as I can tell, this primarily happens when a WebProcess crashes).
Attachments
patch (1.38 KB, patch)
2013-04-11 17:10 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-04-11 17:10:16 PDT
Tim Horton
Comment 2 2013-04-11 17:38:40 PDT
Note You need to log in before you can comment on or make changes to this bug.