REGRESSION (r146956): ASSERTion failure: WebKit::WebProcess::pageWillLeaveWindow https://bugs.webkit.org/show_bug.cgi?id=114481 <rdar://problem/13534784>

Reviewed by Simon Fraser.

Inform the WebProcess of WebPages which are already in a window when created.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):


Canonical link: https://commits.webkit.org/132865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148253 268f45cc-cd09-0410-ab3c-d52691b4dbfc